# SolTrack

./: CITATION.cff  CMakeLists.txt  README.md  SolTrack.c  SolTrack.h  SolTrack_RiseSet.c  TestSolTrackFile.c  TestSolTrackSingle.c  TestSolTrackSingle.txt  codemeta.json
CMake/: CompilerFlags_C.cmake  FileList.cmake  SetCompileOptions.cmake
Python/: README.md  setup.py
Python/soltrack/: __init__.py  data.py  dataclasses.py  riseset.py  soltrack.py
doc/: INSTALL  README
examples/: Makefile  TestSolTrackSingle.c  TestSolTrackSingle.txt
make/: Makefile
